# 3-wheel-bot

./: .gitignore  .ocamlformat  README.md  dune-project
examples/: dune  global_variables.ml  global_variables.mli  mdev_corridor.ml  mdev_test.ml  port.ml  port_map.ml  pwm.mli  sonic.mli  std_bus.mli
mdev/: buzzer.ml  buzzer.mli  dir.ml  dir.mli  direction.ml  direction.mli  dune  global_variables.ml  global_variables.mli  import.ml  led.ml  led.mli  mdev.ml  mdev.mli  motor.ml  motor.mli  port.ml  port.mli  port_map.ml  pwm.ml  pwm.mli  servo.ml  servo.mli  sonic.ml  sonic.mli  std_bus.ml  std_bus.mli
siggy-examples/: dune  siggy.ml
smbus/: bus.ml  bus.mli  dune  import.ml  smbus.ml  smbus_bindings.ml  uint16.ml  uint16.mli  uint8.ml  uint8.mli  uint_intf.ml
src/: blink.ml  bot_lib.ml  dune  field_controller.ml  forward.ml  import.ml  scan.ml  scan.mli  servo_spin.ml  sonic_scan.ml  sonic_sense.ml  stop.ml
